--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -4,12 +4,46 @@
 format: jb-book
 root: intro
 
+
 parts:
 
   - caption: How to use the solvers?
     chapters: 
       - file: usage/Introduction.md
       - file: usage/installation_notes.md
+
+      - file: usage/POD
+        sections:
+          - file: usage/PODfolder/ScalarPOD_Offline.md
+          - file: usage/PODfolder/ScalarPOD_Online.md
+          - file: usage/PODfolder/ScalarPODInterp_Online.md
+          - file: usage/PODfolder/VectorialPOD_Offline.md
+          - file: usage/PODfolder/VectorialPOD_Online.md
+          - file: usage/PODfolder/VectorialPODInterp_Online.md
+
+      - file: usage/EIM
+        sections:
+          - file: usage/EIMfolder/ScalarEIM_Offline.md
+          - file: usage/EIMfolder/ScalarEIM_Online.md
+          - file: usage/EIMfolder/VectorialEIM_Offline.md
+          - file: usage/EIMfolder/VectorialEIM_Online.md
+
+      - file: usage/GEIM
+        sections:
+          - file: usage/GEIMfolder/ScalarGEIM_Offline.md
+          - file: usage/GEIMfolder/ScalarGEIM_Online.md
+          - file: usage/GEIMfolder/ScalarTR-GEIM.md
+
+      - file: usage/GEIM-VT
+        sections:
+          - file: usage/GEIM-VTfolder/GEIM-VT_Offline.md
+          - file: usage/GEIM-VTfolder/GEIM-VT_Online.md
+          - file: usage/GEIM-VTfolder/TR-GEIM-VT.md
+
+      - file: usage/PBDW
+        sections:
+          - file: usage/PBDWfolder/ScalarPBDW_Offline.md
+          - file: usage/PBDWfolder/ScalarPBDW_Online.md
 
   - caption: Tutorials
     chapters: 
@@ -18,39 +52,6 @@ parts:
             - file: Tutorials/BuoyantCavity/perform_offline.md
             - file: Tutorials/BuoyantCavity/offline_results.ipynb
   #         - file: Tutorials/BuoyantCavity/online_results.ipynb
-
-  #     - file: usage/POD
-  #       sections:
-  #         - file: usage/PODfolder/ScalarPOD_Offline.md
-  #         - file: usage/PODfolder/ScalarPOD_Online.md
-  #         - file: usage/PODfolder/ScalarPODInterp_Online.md
-  #         - file: usage/PODfolder/VectorialPOD_Offline.md
-  #         - file: usage/PODfolder/VectorialPOD_Online.md
-  #         - file: usage/PODfolder/VectorialPODInterp_Online.md
-
-  #     - file: usage/EIM
-  #       sections:
-  #         - file: usage/EIMfolder/ScalarEIM_Offline.md
-  #         - file: usage/EIMfolder/ScalarEIM_Online.md
-  #         - file: usage/EIMfolder/VectorialEIM_Offline.md
-  #         - file: usage/EIMfolder/VectorialEIM_Online.md
-
-  #     - file: usage/GEIM
-  #       sections:
-  #         - file: usage/GEIMfolder/ScalarGEIM_Offline.md
-  #         - file: usage/GEIMfolder/ScalarGEIM_Online.md
-  #         - file: usage/GEIMfolder/ScalarTR-GEIM.md
-
-  #     - file: usage/GEIM-VT
-  #       sections:
-  #         - file: usage/GEIM-VTfolder/GEIM-VT_Offline.md
-  #         - file: usage/GEIM-VTfolder/GEIM-VT_Online.md
-  #         - file: usage/GEIM-VTfolder/TR-GEIM-VT.md
-
-  #     - file: usage/PBDW
-  #       sections:
-  #         - file: usage/PBDWfolder/ScalarPBDW_Offline.md
-  #         - file: usage/PBDWfolder/ScalarPBDW_Online.md
 
   - caption: Appendix
     chapters:
