--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -33,6 +33,9 @@ parse:
     - "smartquotes"
     - "substitution"
     
+sphinx:
+  extra_extensions:
+    - sphinx_proof
 # Information about where the book exists on the web
 repository:
   url: https://github.com/executablebooks/jupyter-book  # Online location of your book
